# tesis2

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
agentes/: .env.example  ESTADO_FINAL_COMPLETO.md  ESTRUCTURA.md  IMPLEMENTATION_PLAN_V3.md  IMPLEMENTATION_STATUS_V3.md  QUICKSTART_PHASE1.md  README.md  README_FINAL.md  README_INICIO.md  README_MVP.md  RESUMEN_COMPLETO_FINAL.md  RESUMEN_FINAL_V3.md  RESUMEN_FINAL_V3_ACTUALIZADO.md  SETUP_GITEA.md  __init__.py  docker-compose.yml  go.mod  go.sum  main.py  requirements.txt  resumen_framework.md  test_all_agents_v3.py  test_auto_command.py  test_complete_workflow_v3.py  test_e2e_v3.py  test_final_v3.py  test_framework_v3.py  test_nuevo_formato.py  verificar_sistema.py
agentes/cli/: main_cli.py
agentes/communication/: master_agent_input.json  master_agent_output.json
agentes/config/: framework_config.yaml  go_services.yaml  llm_config.yaml  sop_definitions.yaml
agentes/core/: __init__.py  agent_activation.py  auditor.py  code_executor.py  command_processor.py  coordinator.py  coordinator_v3.py  (+16 more)
docs/: PIPELINE_CRITICIDAD_Y_GATE_TEMPRANO.md  PLAN_EJECUCION_RECUPERACION.md
logs/: README.md
notebooks/: EDA_basico.ipynb  README.md  Seamana5_experimentos_ab_completo.ipynb  eval_early_gate_vs_gold.ipynb  week5_experimentos_ab_completo.ipynb
scripts/: eval_early_gate_corpus.py  run_week5_experiments.py
slides/: README.md
src/: __init__.py  criticidad_case_types.py  generate_criticidad_cases.py  ingest_datasets_v0.py  preprocesamiento.py  verify_criticidad_cases.py
(+127 files in other folders)
